# async_mutex

./: .gitignore  CMakeLists.txt  CMakePresets.json  EXTRACTION-PLAN.md  LICENSE-COMMERCIAL.md  README.md  conanfile.py
.github/workflows/: ci-linux-libcxx.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  coverage.yml
cmake/: catseraf-async-mutexConfig.cmake.in
conan/profiles/: linux-clang-asan  linux-clang-coverage  linux-clang-debug  linux-clang-libc++  linux-clang-libc++-asan  linux-clang-libc++-tsan  linux-clang-libc++-ubsan  linux-clang-release  linux-clang-tsan  linux-clang-ubsan  linux-gcc-release  macos-clang-asan  macos-clang-release  macos-clang-ubsan  windows-msvc-asan  windows-msvc-debug  windows-msvc-release
conan/recipe/all/: conandata.yml  conanfile.py
conan/recipe/all/test_package/: CMakeLists.txt
docs/: COVERAGE.md  DESIGN.md  TSAN-LIBCXX-FALSE-POSITIVE.md
include/catseraf/sync/: async_mutex.hpp
tests/: CMakeLists.txt  sync_test_support.hpp  test_am_p3_impossible_state_traps.cpp  test_arm64_weak_memory.cpp  test_asan_clean.cpp  test_async_mutex_aba_interleave.cpp  test_async_mutex_acquire_livelock.cpp  test_async_mutex_chain_walk_cas_loss.cpp  test_async_mutex_layout_golden.cpp  test_async_mutex_mt_hammer.cpp  test_async_mutex_terminal_cas_recursive_unlock.cpp  test_cancel_and_drain.cpp  test_cancel_and_drain_concurrent.cpp  test_cancellation_mid_wait.cpp  test_consumer_contract_compile.cpp  test_contended_latency.cpp  test_contention_stress.cpp  test_cross_strand_acquire.cpp  test_destructor_release_death.cpp  test_dispatch_vs_post.cpp  test_drain_awaitable_cancellation.cpp  test_drain_destroy_inflight_mt.cpp  test_drain_immediate_destroy_after_reap.cpp  test_drain_latch_holder_lifecycle.cpp  test_drain_onstrand_cancel_during_reap.cpp  test_drain_predrain_holder.cpp  test_drain_reentrant_during_active.cpp  test_drain_strand_local_reap.cpp  test_executor_compat.cpp  test_fifo_across_cycles.cpp  test_fifo_fairness.cpp  test_guard_destructive_move.cpp  test_halo_firing.cpp  test_in_flight_acquirer_coverage.cpp  test_no_std_mutex_ci_gate.cpp  test_pmr_fallback.cpp  test_pool_exhaustion_reuse.cpp  test_race_cancel_during_resume.cpp  test_race_cancel_pre_drain.cpp  test_race_multi_cancel.cpp  (+6 more)
tests/fixtures/: header_transitive_awaitable_include.hpp  header_with_std_mutex_and_awaitable.hpp  header_without_violation.hpp
tests/sync/: sync_test_support.hpp
tools/: check_no_std_mutex_in_awaitable_headers.sh
